examples/src/envoy/resources/envoy/envoy.template.yaml
admin:
    address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: AUTO
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          route: { cluster: grpc_backend }
                          http_filters:
                              - name: envoy.filters.http.grpc_json_transcoder
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                                    # actual config gets injected here.
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    clusters:
        - name: grpc_backend
          connect_timeout: 1s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: grpc_backend
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address: { address: host.testcontainers.internal, port_value: ${GRPC_PORT} }
          typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                      http2_protocol_options: {}
